--- a/Frends.Files.LocalBackup/Frends.Files.LocalBackup/Frends.Files.LocalBackup.csproj
+++ b/Frends.Files.LocalBackup/Frends.Files.LocalBackup/Frends.Files.LocalBackup.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
 	<TargetFrameworks>net6.0;netstandard2.0;net471</TargetFrameworks>
 	<LangVersion>Latest</LangVersion>
-	<Version>2.0.1</Version>
+	<Version>2.0.2</Version>
 	<Authors>Frends</Authors>
 	<Copyright>Frends</Copyright>
 	<Company>Frends</Company>
@@ -13,7 +13,7 @@
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	<Description>Frends tasks for local backup.</Description>
 	<PackageProjectUrl>https://frends.com/</PackageProjectUrl>
-	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.Files</RepositoryUrl>
+	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.Files/tree/main/Frends.Files.LocalBackup</RepositoryUrl>
   </PropertyGroup>
 	
   <ItemGroup>
