--- a/Frends.Files.CreateDirectory/Frends.Files.CreateDirectory/Frends.Files.CreateDirectory.csproj
+++ b/Frends.Files.CreateDirectory/Frends.Files.CreateDirectory/Frends.Files.CreateDirectory.csproj
@@ -23,6 +23,7 @@
 
 	<ItemGroup>
 	<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+	<PackageReference Include="SimpleImpersonation" Version="4.2.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
     <PackageReference Include="System.Runtime.Caching" Version="7.0.0" />
   </ItemGroup>
