--- a/.github/workflows/Delete_build_and_test_on_push.yml
+++ b/.github/workflows/Delete_build_and_test_on_push.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    uses: FrendsPlatform/FrendsTasks/.github/workflows/build_test.yml@main
+    uses: FrendsPlatform/FrendsTasks/.github/workflows/build_test.yml@issue-46
     with:
       workdir: Frends.Files.Delete
     secrets:
