--- a/.github/workflows/Copy_release.yml
+++ b/.github/workflows/Copy_release.yml
@@ -1,4 +1,4 @@
-name: Delete_release
+name: Copy_release
 
 on:
   workflow_dispatch:
@@ -7,6 +7,6 @@ jobs:
   build:
     uses: FrendsPlatform/FrendsTasks/.github/workflows/release.yml@main
     with:
-      workdir: Frends.Files.Delete
+      workdir: Frends.Files.Copy
     secrets:
       feed_api_key: ${{ secrets.TASKS_FEED_API_KEY }}
