--- a/.github/workflows/Write_build_and_test_on_main.yml
+++ b/.github/workflows/Write_build_and_test_on_main.yml
@@ -1,17 +1,17 @@
-name: Delete_build_main
+name: Move_build_main
 
 on:
   push:
     branches:    
       - main
     paths:
-      - 'Frends.Files.Delete/**'
+      - 'Frends.Files.Move/**'
   workflow_dispatch:
 
 jobs:
   build:
     uses: FrendsPlatform/FrendsTasks/.github/workflows/build_main.yml@main
     with:
-      workdir: Frends.Files.Delete
+      workdir: Frends.Files.Move
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
