--- a/.github/workflows/Write_build_and_test_on_push.yml
+++ b/.github/workflows/Write_build_and_test_on_push.yml
@@ -1,18 +1,18 @@
-name: Delete_build_test
+name: Move_build_test
 
 on:
   push:
     branches-ignore: 
       - main
     paths:
-      - 'Frends.Files.Delete/**'
+      - 'Frends.Files.Move/**'
   workflow_dispatch:
 
 jobs:
   build:
     uses: FrendsPlatform/FrendsTasks/.github/workflows/build_test.yml@main
     with:
-      workdir: Frends.Files.Delete
+      workdir: Frends.Files.Move
     secrets:
       badge_service_api_key: ${{ secrets.BADGE_SERVICE_API_KEY }}
       test_feed_api_key: ${{ secrets.TASKS_TEST_FEED_API_KEY }}
