--- a/Frends.Files.Write/Frends.Files.Write.Tests/Frends.Files.Write.Tests.csproj
+++ b/Frends.Files.Write/Frends.Files.Write.Tests/Frends.Files.Write.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Frends.Files.Delete\Frends.Files.Delete.csproj" />
+    <ProjectReference Include="..\Frends.Files.Write\Frends.Files.Write.csproj" />
   </ItemGroup>
 
 </Project>
