Fixed workflows and documentation

--- a/.github/workflows/Write_release.yml
+++ b/.github/workflows/Write_release.yml
@@ -1,4 +1,4 @@
-name: Move_release
+name: Write_release
 
 on:
   workflow_dispatch:
@@ -7,6 +7,6 @@ jobs:
   build:
     uses: FrendsPlatform/FrendsTasks/.github/workflows/release.yml@main
     with:
-      workdir: Frends.Files.Move
+      workdir: Frends.Files.Write
     secrets:
       feed_api_key: ${{ secrets.TASKS_FEED_API_KEY }}
