More PR review changes

--- a/Frends.Files.Write/Frends.Files.Write/Frends.Files.Write.csproj
+++ b/Frends.Files.Write/Frends.Files.Write/Frends.Files.Write.csproj
@@ -13,7 +13,7 @@
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	<Description>Frends tasks for writing a file.</Description>
 	<PackageProjectUrl>https://frends.com/</PackageProjectUrl>
-	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.Files/tree/main/Frends.Files.Move</RepositoryUrl>
+	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.Files/tree/main/Frends.Files.Write</RepositoryUrl>
   </PropertyGroup>
 	
   <ItemGroup>
