--- a/Frends.Files.MoveDirectory/Frends.Files.MoveDirectory.Tests/Frends.Files.MoveDirectory.Tests.csproj
+++ b/Frends.Files.MoveDirectory/Frends.Files.MoveDirectory.Tests/Frends.Files.MoveDirectory.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Frends.Files.CreateDirectory\Frends.Files.CreateDirectory.csproj" />
+    <ProjectReference Include="..\Frends.Files.MoveDirectory\Frends.Files.MoveDirectory.csproj" />
   </ItemGroup>
 
 </Project>
