--- a/Frends.Files.MoveDirectory/Frends.Files.MoveDirectory/Frends.Files.MoveDirectory.csproj
+++ b/Frends.Files.MoveDirectory/Frends.Files.MoveDirectory/Frends.Files.MoveDirectory.csproj
@@ -10,7 +10,7 @@
 	<PackageTags>Frends</PackageTags>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
-	<Description>Frends task to create a directory.</Description>
+	<Description>Frends task to move a directory.</Description>
 	<PackageProjectUrl>https://frends.com/</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/FrendsPlatform/Frends.Files/tree/main/Frends.Files.CreateDirectory</RepositoryUrl>
   </PropertyGroup>
