--- a/Frends.Files.Write/Frends.Files.Write/Frends.Files.Write.csproj
+++ b/Frends.Files.Write/Frends.Files.Write/Frends.Files.Write.csproj
@@ -29,6 +29,10 @@
 	<PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="7.0.0" />
 	<PackageReference Include="System.DirectoryServices" Version="7.0.0" />
 	<PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
+	<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+		<PrivateAssets>all</PrivateAssets>
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
 </Project>
