--- a/Frends.Files.Copy/Frends.Files.Copy.Tests/Frends.Files.Copy.Tests.csproj
+++ b/Frends.Files.Copy/Frends.Files.Copy.Tests/Frends.Files.Copy.Tests.csproj
@@ -8,12 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
-	<PackageReference Include="nunit" Version="3.12.0" />
-	<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
-    <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.8.3" />
+    <PackageReference Include="nunit" Version="4.3.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.8.3" />
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
