--- a/Frends.Files.Move/Frends.Files.Move.Tests/Frends.Files.Move.Tests.csproj
+++ b/Frends.Files.Move/Frends.Files.Move.Tests/Frends.Files.Move.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Docker.DotNet" Version="3.125.15" />
 	<PackageReference Include="MSTest.TestFramework" Version="3.8.3" />
 	<PackageReference Include="nunit" Version="4.3.2" />
 	<PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
